Fix overflow

--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -86,7 +86,6 @@
     }
   }
   .service-container {
-    overflow-x: hidden;
   }
   .service {
     max-width: 1200px;
